CSS variables for colors, fixed bottom right dots, added border around the modal for mobile, fixed blur on mobile safari / any ios browser

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ html {
   background-color: black;
 }
 
+:root {
+  --red: #ff6961;
+  --green: #c1e1c1;
+  --blue: #a7c7e7;
+}
+
 body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -78,7 +84,7 @@ h1.underline {
   bottom: 0;
   position: absolute;
   height: 5px;
-  background-color: #ff6961;
+  background-color: var(--red);
   transition: 0.5s;
 }
 
@@ -118,42 +124,42 @@ i.far {
 }
 
 html.red i:hover {
-  color: #ff6961;
+  color: var(--red);
 }
 
 html.red .underline::after {
-  background-color: #ff6961;
+  background-color: var(--red);
 }
 
 html.red input[type="submit"],
 html.red button {
-  background-color: #ff6961;
+  background-color: var(--red);
 }
 
 html.green i:hover {
-  color: #c1e1c1;
+  color: var(--green);
 }
 
 html.green .underline::after {
-  background-color: #c1e1c1;
+  background-color: var(--green);
 }
 
 html.green input[type="submit"],
 html.green button {
-  background-color: #c1e1c1;
+  background-color: var(--green);
 }
 
 html.blue i:hover {
-  color: #a7c7e7;
+  color: var(--blue);
 }
 
 html.blue .underline::after {
-  background-color: #a7c7e7;
+  background-color: var(--blue);
 }
 
 html.blue input[type="submit"],
 html.blue button {
-  background-color: #a7c7e7;
+  background-color: var(--blue);
 }
 
 .flex-apart-wrap {
@@ -168,6 +174,21 @@ html.blue button {
 
 .flex-apart-wrap > h3 {
   margin-right: 1ch;
+}
+
+i.fa-circle.red,
+i.fa-circle.red:hover {
+  color: var(--red);
+}
+
+i.fa-circle.green,
+i.fa-circle.green:hover {
+  color: var(--green);
+}
+
+i.fa-circle.blue,
+i.fa-circle.blue:hover {
+  color: var(--blue);
 }
 
 .dots {
@@ -199,10 +220,12 @@ html.blue button {
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .modal-dialog {
   background: rgba(0, 0, 0, 0.9);
+  border: 1px solid rgb(130, 135, 140, 0.5);
   padding: 1em;
   border-radius: 10px;
 }
